styles/global.css
header.light {
  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px),
                    linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
  background-size: 20px 20px; /* Adjust to make pattern larger or smaller */
}

header.dark {
  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
                    linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
  background-size: 20px 20px; /* Adjust to make pattern larger or smaller */
}

html, body, #__next {
  height: 100%;
  width: 100%;
}

